<resources>
    <string name="app_name">Hel7ally</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>


    <string name="level">Level</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="get_start">Get Start</string>
    <string name="register">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create an account</string>
    <string name="forget_password">Forget Password</string>
    <string name="mobile_or_email">Mobile Number / Email</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="get_support">Get Support</string>
    <string name="support_txt">For any support request regards your orders or deliveries please feel free to speake with us at below.</string>
    <string name="support_number">Call us : +91 7838XXXXXX</string>
    <string name="support_email">Mail us : syalfreelance@gmail.com</string>
    <string name="setting">Settings</string>
    <string name="prof_name">Ahmed Abdelrahman</string>
    <string name="poof_number">+20 111XXXX</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="complaint">Complaint</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="log_out">Log out</string>
    <string-array name="faculty_arrays">
        <item>Choose your faculty</item>
        <item>FCAI</item>
        <item>medicine</item>
        <item>Engineering</item>
        <item>Mass Communication</item>
        <item>Commerce</item>
        <item>Law</item>
        <item>Science</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_assignment">Assignment</string>
    <string name="menu_support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="pro_desc">Class XI-B | Roll no : 4</string>
    <string name="done">Done</string>
    <string name="university">University</string>
    <string name="birth_date">Birth of Date</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="problem">Problem</string>
    <string name="assign_date">Assign Date</string>
    <string name="last_sub_date">Last Submission Date</string>
    <string name="ass_date_value">6 Jan 2022</string>
    <string name="last_sub_date_value">10 jan 2022</string>
    <string name="view_answer">View Answer</string>
    <string name="question_content">In 2017, which player became the leading run scoreof all tie in women\'s ODI cricket ? </string>
    <string name="stefanie_taylor">Stefanie Taylor</string>
    <string name="mithali_raj">mithali raj</string>
    <string name="suzia_betez">Suzia Betez</string>
    <string name="harmanpreet_kaur">Harmanpreet kaur</string>
    <string name="question_num">1</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="quiz_result">You are Excellent,</string>
    <string name="subject">Subject</string>
    <string name="full_grade">100</string>
    <string name="grade">75 - B</string>
    <string name="download_pdf">Download PDF</string>
    <string name="result">Result</string>
    <string name="question_counter">99</string>
    <string name="question">Question</string>
    <string name="balance_counter">999</string>
    <string name="wallet">Wallet</string>
    <string name="egy">EGY</string>
    <string name="wallet_value">99</string>
    <string name="available_amount_tv">Available Amount</string>
    <string name="amount_of_recharge">Amount of Recharge</string>
    <string name="wallet_val_edt">1000</string>
    <string name="upload_receipt_of_pay">Upload receipt of pay!</string>
    <string name="vod_num">01017231777</string>
    <string name="ets_num">01128254514</string>
    <string name="slash">/</string>
    <string name="users_counter">250</string>
    <string name="field">Field</string>

</resources>