<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.card.MaterialCardView
        style="@style/assignmentCardViewStyle"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/small_margin_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin_top">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:padding="@dimen/small_padding"
                android:layout_margin="@dimen/small_margin_top"
                android:textSize="@dimen/mid_txt_size"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin_top"
                android:textSize="@dimen/small_txt_size"
                android:text="@string/problem"
                android:id="@+id/problem"
                android:layout_marginTop="@dimen/small_padding"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/assign_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin_top"
                android:text="@string/assign_date"
                android:textSize="@dimen/small_txt_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/problem"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin_top"
                android:textSize="@dimen/small_txt_size"
                android:text="@string/last_sub_date"
                android:id="@+id/last_sub_date"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@id/assign_date"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin_top"
                android:textSize="@dimen/small_txt_size"
                android:text="@string/ass_date_value"
                android:id="@+id/assign_date_value"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@id/problem"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin_top"
                android:textSize="@dimen/small_txt_size"
                android:text="@string/last_sub_date_value"
                android:id="@+id/last_sub_date_value"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/assign_date_value"
                android:textColor="@color/black"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_sub_date"
                android:layout_margin="@dimen/small_margin_top"
                >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:text="@string/view_answer"
                    android:textSize="@dimen/mid_txt_size" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>