<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".SupportActivity">

    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        />

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewStyle"
        android:id="@+id/cardview_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1.0" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/support_avatar"
                    android:layout_marginTop="@dimen/small_margin_top"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    style="@style/headerText"
                    android:layout_margin="@dimen/signup_text_margin_top"
                    android:text="@string/get_support"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/mid_txt_size"
                    android:layout_margin="@dimen/signup_text_margin_top"
                    android:text="@string/support_txt"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/mid_txt_size"
                    android:layout_marginTop="@dimen/mid_margin"
                    android:text="@string/support_number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/mid_txt_size"
                    android:text="@string/support_email"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    />

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        >

        <TextView
            style="@style/headerText"
            android:layout_margin="@dimen/signup_text_margin_top"
            android:text="@string/support"
            android:textAlignment="viewStart"
            app:drawableLeftCompat="@drawable/ic_arrow_left"
            android:id="@+id/support_arrow_back"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>