<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeeActivity"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".15"
        />


    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/ques_cardView"
        android:padding="1dp"
        app:cardElevation="5dp"
        android:layout_width="@dimen/grid_item_width"
        android:layout_height="@dimen/grid_item_height"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/balance_cardView" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:orientation="vertical"
            android:layout_margin="@dimen/small_margin_top"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/ic_attendance"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_counter"
                android:textColor="@color/black"
                android:textSize="@dimen/mid_txt_size"
                android:textStyle="bold"
                android:padding="@dimen/small_padding"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/second_txt_color"
                android:textStyle="bold"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/balance_cardView"
        android:padding="1dp"
        app:cardElevation="5dp"
        android:layout_width="@dimen/grid_item_width"
        android:layout_height="@dimen/grid_item_height"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/ques_cardView"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin_top"
            android:orientation="vertical"
            android:layout_margin="@dimen/small_padding"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/ic_fees_due"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_counter"
                    android:id="@+id/wallet_value_home"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mid_txt_size"
                    android:textStyle="bold"
                    android:padding="@dimen/small_padding"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/egy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mid_txt_size"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="@color/second_txt_color"
                android:textStyle="bold"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_details"
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1.0"
        >


        <GridView
            android:id="@+id/gvHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_margin_top"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginEnd="@dimen/small_margin_top"
            android:layout_marginBottom="@dimen/small_padding"
            android:columnWidth="@dimen/grid_item_width"
            android:horizontalSpacing="@dimen/small_padding"
            android:numColumns="2"
            android:verticalSpacing="@dimen/small_padding"
            tools:listitem="@layout/home_item" />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>